# axes

./: .gitignore  ARG_PARSER.md  AXES_TOML_GUIDE.md  BENCHMARKS.md  CHANGELOG.md  CHANGE_LOG.md  COMMAND.md  Cargo.toml  GETTING_STARTED.md  LICENSE  README.md  ROADMAP.md  TECHNICAL.md  TECNICAL.md  TODO.md  benchmark_results.md  build.rs  flamegraph.html  flamegraph.svg.html  flamegraph.txt  flamegraph_new.html  flamegraph_new.svg.html
.axes/: axes.toml  command_test.ps1
.axes_2/: axes.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  manual-test.yml  release.yml  rust.yml
docs/es/: ARG_PARSER.md  AXES_TOML_GUIDE.md  BENCHMARKS.md  COMMAND.md  GETTING_STARTED.md  README.md  ROADMAP.md  TECHNICAL.md  TECNICAL.md
examples/: BENCHMARK.md  BENCHMARKS.md
examples/python-web-api/: introduction.md
examples/python-web-api [OUTDATED]/: app.py
examples/python-web-api [OUTDATED]/.axes/: axes.toml
examples/python-web-api/.axes/: axes.toml
examples/python-web-api/tests/: test_app.py
examples/stress_tests/: benchmark_results.md  gen_axes.py  gen_just.py  gen_make.py  gen_task.py  low_benchmark_result.md
examples/stress_tests/.axes/: axes.toml
examples/stress_tests/big_divided_test/.axes/: axes.toml
examples/stress_tests/big_divided_test/into/: benchmark_results.md
examples/stress_tests/big_divided_test/into/.axes/: axes.toml
examples/stress_tests/high_test/: makefile.mk
examples/stress_tests/high_test/.axes/: axes.toml
examples/stress_tests/low_test/: makefile.mk
examples/stress_tests/low_test/.axes/: axes.toml
examples/stress_tests/mid_test/: makefile.mk
examples/stress_tests/mid_test/.axes/: axes.toml
locales/: en.toml  es.toml
src/: axesrs.txt  benchmark_results.md  cli.rs  constants.rs  dev_utils.rs  lib.rs  models.rs  parcode-project.txt  state.rs  tmp.md
src - copia/: cli.rs  constants.rs  models.rs
src - copia/.axes/: axes.toml
src - copia/core/: config_resolver.rs  context_resolver.rs  graph_display.rs  index_manager.rs  interpolator.rs  mod.rs  onboarding_manager.rs  paths.rs
src - copia/system/: executor.rs  shell.rs
src/.axes/: axes.toml
src/cli/: args.rs  dispatcher.rs  mod.rs
src/cli/handlers/: alias.rs  commons.rs  debug_cache.rs  delete.rs  info.rs  init.rs  link.rs  mod.rs  open.rs  register.rs  rename.rs  repair.rs  run.rs  start.rs  tree.rs  unregister.rs
src/core/: arg_parser.rs  cache.rs  color.rs  commons.rs  compiler.rs  config_loader.rs  config_resolver.rs  context_resolver.rs  graph_display.rs  index_manager.rs  interpolator.rs  mod.rs  onboarding_manager.rs  parameters.rs  paths.rs  task_executor.rs
src/system/: executor.rs  mod.rs  shell.rs  shells_config.rs
