[package]
name = "axes"
version = "0.3.0-beta"
authors = ["Reynier Ramos <reynierramos280@gmail.com>"]
description = "A high-performance, scalable workflow orchestrator for modern development."
edition = "2024"
license = "MIT"
repository = "https://github.com/retypeos/axes"
homepage = "https://github.com/retypeos/axes"
keywords = ["cli", "task-runner", "orchestrator", "build-tool", "performance"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85.0"

[dependencies]
# Core Logic
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Command Line Interface
clap = { version = "4.5.47", features = ["derive", "cargo"] }
colored = "3.0.0"
dialoguer = "0.12.0"

# Serialization & Configuration
bincode = {version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.5"
hex = "0.4.3"

# Error Handling
anyhow = "1.0.99"
thiserror = "2.0.16"

# System & Filesystem Utilities
dirs = "6.0.0"
dunce = "1.0.5"
scopeguard = "1.2.0"
shellexpand = "3.1.1"
tempfile = "3.21.0"
walkdir = "2.5.0"

# Logging
log = "0.4.28"
env_logger = "0.11.8"

# Concurrency & Parsing
rayon = "1.11.0"
lazy_static = "1.5.0"
regex = "1.11.2"
shlex = "1.3.0"

# Asynchronous Runtime
tokio = { version = "1.47.1", features = ["rt-multi-thread", "process", "signal", "macros"] }

# Hashing
blake3 = "1.8.2"

# Compression
lz4_flex = "0.11.5"

[build-dependencies]
toml = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }

[features]
# By default, no extra languages are compiled, so it will fall back to English.
default = []
lang_en = []
lang_es = []

[profile.release]
# debug = true

lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = 3